--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  	<header class="main-header">
-  		<nav class="main-navigation">
-  			<a><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
-  			<ul class="site-navigation">
+
+    <header class="main-header">
+  	   	<nav class="main-navigation">
+  			 <a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
+  			 <ul class="site-navigation">
   				<li class="site-navigation-menu">
   					<a href="#">Каталог</a>
-  					<ul class="submenu">
+  					<ul class="submenu visually-hidden">
   						<li>
   							<a class="special" href="#">Новинки</a>
   						</li>
@@ -26,18 +27,18 @@
   				</li>
   				<li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
   				<li class="site-navigation-menu"><a href="#">О Компании</a></li>
-  			</ul>
-  			<ul class="user-navigation">
+  			 </ul>
+  			 <ul class="user-navigation">
           <li class="search">
             <button class="button search-button" aria-label="Поиск"><img src="img/search.svg" alt="search icon"></button>
-            <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <form class="form search-form visually-hidden" action="https://echo.htmlacademy.ru" method="get">
               <label class="visually-hidden" for="search">Поиск</label>
               <input type="search" name="search_line" id="search" placeholder="Что ищем?">
             </form>
           </li>
   				<li class="login">
             <a class="button login-button" href="#"><img src="img/login.svg" alt="login icon">Вход</a>  
-            <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+            <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
               <p>
                 <label class="visually-hidden" for="email">Электронная почта</label>
                 <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
@@ -59,10 +60,11 @@
             <a class="button cart-button" href="#"><img src="img/cart.svg" alt="cart icon">Пусто</a>
           </li>
   			</ul>
-  		</nav>
+  	   	</nav>
 
+      
   		<div class="main-header-info">
-  			<span class="info-workinghour">С 10 до 20, ежедневно</span><br>
+  			  <span class="info-workinghour">С 10 до 20, ежедневно</span><br>
   		    <span class="info-phone">8 812 450-25-25</span>
   		</div>
   	</header>
@@ -76,11 +78,11 @@
   					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
-  				<li class="slider-item">
+  				<li class="slider-item visually-hidden">
   					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
-  				<li class="slider-item">
+  				<li class="slider-item visually-hidden">
   					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
@@ -118,6 +120,7 @@
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
   					<p class="price">310₽<span class="price-weight">/кг</span></p>
+            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -126,6 +129,7 @@
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
   					<p class="price">380₽<span class="price-weight">/кг</span></p>
+            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -134,6 +138,7 @@
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
   					<p class="price">355₽<span class="price-weight">/кг</span></p>
+            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
@@ -142,6 +147,7 @@
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
   					<p class="price">415₽<span class="price-weight">/кг</span></p>
+            <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   			</ul>
   		</section>
@@ -163,25 +169,27 @@
   				</li>
   			</ul>
   		</section>
+      
+      <div class="flex-main">
+  		  <section class="news">
+  			 <h2 class="news-title">Новое в нашем блоге</h2>
+  			 <p class="news-text"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
+  		  </section>
 
-  		<section class="news">
-  			<h2 class="news-title">Новое в нашем блоге</h2>
-  			<p class="news-text"><a href="#">10 способов сервировки фруктовых щербетов к столу</a></p>
-  		</section>
-
-  		<section class="dispatch">
-  			<h2 class="visually-hidden">Рассылка</h2>
-  			<p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-  			<form class="dispatch-form" action="https://echo.htmlacademy.ru" method="post">
-          <p>
-            <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
-           <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
-          </p>
-          <p>
-            <button class="button" type="submit">Отправить</button>
-          </p>
-        </form>
-  		</section>
+  		  <section class="dispatch">
+  			 <h2 class="visually-hidden">Рассылка</h2>
+  			 <p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+  			 <form class="form dispatch-form" action="https://echo.htmlacademy.ru" method="post">
+            <p>
+             <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
+            <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
+           </p>
+           <p>
+             <button class="button" type="submit">Отправить</button>
+            </p>
+         </form>
+  		  </section>
+      </div>
 
   		<section class="map">
   			<h2 class="visually-hidden">Карта и адрес</h2>
@@ -230,7 +238,7 @@
 
   	<section class="modal modal-feedback">
   		<p><b>Мы обязательно вам ответим!</b></p>
-  		<form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+  		<form class="form feedback-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
           <label class="visually-hidden" for="name">Имя</label>
           <input type="text" name="name_line" id="name" placeholder="Как вас зовут?" required>
