--- a/index.html
+++ b/index.html
@@ -7,61 +7,61 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
+  
+  <body class="background">
 
     <header class="main-header">
   	   	<nav class="main-navigation">
-  			 <a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
-  			 <ul class="site-navigation">
-  				<li class="site-navigation-menu">
-  					<a href="#">Каталог</a>
-  					<ul class="submenu visually-hidden">
-  						<li>
-  							<a class="special" href="#">Новинки</a>
-  						</li>
-  						<li><a href="catalog_cream.html">Сливочное</a></li>
-  						<li><a href="#">Щербеты</a></li>
-  						<li><a href="#">Фруктовый лед</a></li>
-  						<li><a href="#">Мелорин</a></li>
-  					</ul>
-  				</li>
-  				<li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
-  				<li class="site-navigation-menu"><a href="#">О Компании</a></li>
-  			 </ul>
-  			 <ul class="user-navigation">
-          <li class="search">
-            <button class="button search-button" aria-label="Поиск"><img src="img/search.svg" alt="search icon"></button>
-            <form class="form search-form visually-hidden" action="https://echo.htmlacademy.ru" method="get">
+  			  <a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
+  			  <ul class="site-navigation">
+  				  <li class="site-navigation-menu">
+  				  	<a href="#">Каталог</a>
+  				  	<ul class="submenu visually-hidden">
+  					 	  <li>
+  							  <a class="special" href="#">Новинки</a>
+  						  </li>
+  						  <li><a href="catalog_cream.html">Сливочное</a></li>
+  						  <li><a href="#">Щербеты</a></li>
+  						  <li><a href="#">Фруктовый лед</a></li>
+  						  <li><a href="#">Мелорин</a></li>
+  				  	</ul>
+  				  </li>
+  				  <li class="site-navigation-menu"><a href="#">Доставка и оплата</a></li>
+  				  <li class="site-navigation-menu"><a href="#">О Компании</a></li>
+  			  </ul>
+  			  <ul class="user-navigation">
+            <li class="search">
+              <button class="button search-button" aria-label="Поиск"><img src="img/search.svg" alt="search icon"></button>
+              <form class="form search-form visually-hidden" action="https://echo.htmlacademy.ru" method="get">
               <label class="visually-hidden" for="search">Поиск</label>
               <input type="search" name="search_line" id="search" placeholder="Что ищем?">
-            </form>
-          </li>
-  				<li class="login">
-            <a class="button login-button" href="#"><img src="img/login.svg" alt="login icon">Вход</a>  
-            <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
-              <p>
-                <label class="visually-hidden" for="email">Электронная почта</label>
-                <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
-              </p>
-              <p>
-                <label class="visually-hidden" for="password">Пароль</label>
-                 <input type="password" name="password_line" id="password" placeholder="Пароль" required>
-              </p>
-              <p>
-                <a href="#">Забыли пароль?</a>
-                <a href="#">Новая регистрация</a>
-              </p>
-              <p>
-                <button class="button" type="submit">Войти </button>
-              </p>
-            </form>
-          </li>
-  				<li class="cart">
-            <a class="button cart-button" href="#"><img src="img/cart.svg" alt="cart icon">Пусто</a>
-          </li>
-  			</ul>
+              </form>
+            </li>
+  			  	<li class="login">
+              <a class="button login-button" href="#"><img src="img/login.svg" alt="login icon">Вход</a>  
+              <form class="form login-form visually-hidden" action="https://echo.htmlacademy.ru" method="post">
+                <p>
+                  <label class="visually-hidden" for="email">Электронная почта</label>
+                  <input type="email" name="email_line" id="email" placeholder="Электронная почта" required>
+                </p>
+                <p>
+                  <label class="visually-hidden" for="password">Пароль</label>
+                  <input type="password" name="password_line" id="password" placeholder="Пароль" required>
+                </p>
+                <p>
+                  <a href="#">Забыли пароль?</a>
+                  <a href="#">Новая регистрация</a>
+                </p>
+                <p>
+                  <button class="button" type="submit">Войти </button>
+                </p>
+              </form>
+            </li>
+  				  <li class="cart">
+              <a class="button cart-button" href="#"><img src="img/cart.svg" alt="cart icon">Пусто</a>
+            </li>
+  			  </ul>
   	   	</nav>
-
       
   		<div class="main-header-info">
   			  <span class="info-workinghour">С 10 до 20, ежедневно</span><br>
@@ -75,14 +75,17 @@
   			<h2 class="visually-hidden">Промо</h2>
   			<ul class="slider-list">
   				<li class="slider-item">
+            <img src="img/ice_cream_1.png" alt="Крем-брюле и пломбир"></img>
   					<p class="slider-description"><b>Крем-брюле и пломбир с малиновым джемом</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item visually-hidden">
+            <img src="img/ice_cream_2.png" alt="Шоколадный пломбир и сорбет"></img>
   					<p class="slider-description"><b>Шоколадный пломбир и лимонный сорбет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
   				<li class="slider-item visually-hidden">
+            <img src="img/ice_cream_3.png" alt="Пломбир и клубничный сорбет"></img>
   					<p class="slider-description"><b>Пломбир с помадкой и клубничный щербет</b></p>
   					<a class="button" href="#">Давайте оба!</a>
   				</li>
@@ -106,7 +109,7 @@
   					<h3>Шоколадки даром!</h3>
   					<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей школадной присыпки совершенно бесплатно.</p>
   					<a class="button" href="#">Хочу шоколадки!</a>
-  				</li>		
+  				</li>
   			</ul>
   		</section>
 
@@ -116,7 +119,7 @@
   				<li class="catalog-item">
   					<a href="#">
   						<img src="img/item_icons/1.jpg" width="200" height="200" alt="Изображение товара">
-              <img src="img/hot.svg" width="61" height="61" alt="Хит">
+              <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
   					<p class="price">310₽<span class="price-weight">/кг</span></p>
@@ -125,7 +128,7 @@
   				<li class="catalog-item">
   					<a href="#">
   						<img src="img/item_icons/2.jpg" width="200" height="200" alt="Изображение товара">
-              <img src="img/hot.svg" width="61" height="61" alt="Хит">
+              <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
   					<p class="price">380₽<span class="price-weight">/кг</span></p>
@@ -134,7 +137,7 @@
   				<li class="catalog-item">
   					<a href="#">
   						<img src="img/item_icons/3.jpg" width="200" height="200" alt="Изображение товара">
-              <img src="img/hot.svg" width="61" height="61" alt="Хит">
+              <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
   					<p class="price">355₽<span class="price-weight">/кг</span></p>
@@ -143,7 +146,7 @@
   				<li class="catalog-item">
   					<a href="#">
   						<img src="img/item_icons/4.jpg" width="200" height="200" alt="Изображение товара">
-              <img src="img/hot.svg" width="61" height="61" alt="Хит">
+              <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
   					<p class="price">415₽<span class="price-weight">/кг</span></p>
