--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <body class="background">
 
-    <header class="main-header">
-  	   	<nav class="main-navigation">
-  			  <a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
+    <header class="container main-header">
+  	 <nav class="main-navigation">
+  			<a class="navigation-logo"><img src="img/logo.svg" width="154" height="64" alt="Логотип магазина"></a>
   			  <ul class="site-navigation">
   				  <li class="site-navigation-menu">
   				  	<a href="#">Каталог</a>
@@ -68,7 +68,7 @@
   		    <span class="info-phone">8 812 450-25-25</span>
   		</div>
   	</header>
-
+    
   	<main class="container">
   		<h1 class="visually-hidden">Интернет-магазин мороженного Глейси</h1>
   		<section class="slider">
@@ -121,38 +121,46 @@
   			<ul class="catalog-list">
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/1.png" width="267" height="267" alt="Изображение товара">
+              <div>
+  						  <img src="img/item_icons/1.png" width="267" height="267" alt="Изображение товара">
+                <p class="price">310₽<span class="price-weight">/кг</span></p>
+              </div>
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
   					</a>
-  					<p class="price">310₽<span class="price-weight">/кг</span></p>
             <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/2.png" width="267" height="267" alt="Изображение товара">
+              <div>
+  						  <img src="img/item_icons/2.png" width="267" height="267" alt="Изображение товара">
+                <p class="price">380₽<span class="price-weight">/кг</span></p>
+              </div>
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-кофейное с кусочками шоколада</p>
   					</a>
-  					<p class="price">380₽<span class="price-weight">/кг</span></p>
             <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/3.png" width="267" height="267" alt="Изображение товара">
+              <div>
+  						  <img src="img/item_icons/3.png" width="267" height="267" alt="Изображение товара">
+                <p class="price">355₽<span class="price-weight">/кг</span></p>
+              </div>
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочно-клубничное с присыпкой из белого шоколада</p>
   					</a>
-  					<p class="price">355₽<span class="price-weight">/кг</span></p>
             <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   				<li class="catalog-item">
   					<a href="#">
-  						<img src="img/item_icons/4.png" width="267" height="267" alt="Изображение товара">
+              <div>
+  						  <img src="img/item_icons/4.png" width="267" height="267" alt="Изображение товара">
+                <p class="price">415₽<span class="price-weight">/кг</span></p>
+              </div>
               <img class="hot" src="img/hot.svg" width="61" height="61" alt="Хит">
   						<p>Сливочное крем-брюле с карамельной подливкой</p>
   					</a>
-  					<p class="price">415₽<span class="price-weight">/кг</span></p>
             <button class="button visually-hidden" type="button">Быстрый просмотр</button>
   				</li>
   			</ul>
@@ -217,11 +225,11 @@
   		</section>
   	</main>
 
-  	<footer class="main-footer">
+  	<footer class="container main-footer">
   		<div class="footer-social">
   			<ul class="social-list">
   				<li><a class="social-button" href="#">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px"height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
               M23.944,12.809c-0.251,6.516-3.463,10.832-10.992,10.702c-0.14,0-0.205,0-0.233,0c-0.015,0-0.021,0-0.021,0
               c-0.029,0-0.094,0-0.232,0c-0.447,0-4.543-0.443-5.344-1.823c2.479,0.19,4.247-0.406,5.12-1.136
@@ -245,14 +253,14 @@
             </svg>    
           </a></li>
   				<li><a class="social-button" href="#">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16,0C7.164,0,0,7.163,0,16s7.164,16,16,16c8.837,0,16-7.164,16-16S24.837,0,16,0z M20.062,9.455h-3.021
               v3.444h3.021v3.445h-3.021v8.61h-3.021v-8.61H11v-3.445h3.021V9.455c0-1.902,1.353-3.445,3.021-3.445h3.021V9.455z"/>
             </svg>
           </a></li>
   				<li><a class="social-button" href="#">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
               <path fill="#FFFFFF" d="M16.637,14.495c0.402-0.019,0.719-0.082,0.951-0.188c0.326-0.145,0.54-0.33,0.641-0.559
               c0.101-0.229,0.15-0.496,0.15-0.797c0-0.232-0.058-0.465-0.174-0.697c-0.116-0.232-0.322-0.405-0.617-0.517
@@ -271,7 +279,7 @@
   			</ul>
   		</div>
 
-		<nav class="footer-links">
+		  <nav class="footer-links">
   			<ul class="links-list">
   				<li class="heart"><a href="#">Для поставщиков</a></li>
           <li><a href="#">Наши документы</a></li>
