--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   			<ul class="stock-list">
   				<li class="stock-item stock-raspberry">
   					<h3>Малинка даром!</h3>
-  					<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+  					<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
   					<a class="button" href="#">Хочу варенье!</a>
   				</li>
   				<li class="stock-item stock-chocolate">
@@ -194,36 +194,36 @@
   			 <h2 class="visually-hidden">Рассылка</h2>
   			 <p class="dispatch-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
   			 <form class="form dispatch-form" action="https://echo.htmlacademy.ru" method="post">
-            <p>
               <label class="visually-hidden" for="email_dispatch">Электронная почта</label>
               <input type="email" name="email_line" id="email_dispatch" placeholder="Электронная почта" required>
-           </p>
-           <p>
              <button class="button" type="submit">Отправить</button>
-            </p>
          </form>
   		  </section>
       </div>
+  	</main>
 
-  		<section class="map">
-  			<h2 class="visually-hidden">Карта и адрес</h2>
-  			<p>
+    <section class="map">
+        <h2 class="visually-hidden">Карта и адрес</h2>
+        <p>
           <img src="img/map.jpg" width="1250" height="640" alt="Главный офис и офлайн-магазин по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">   
         </p>
-  			<div class="map-adress">
-  				<p>
-  					Адреса главного офиса и офлайн-магазина:<br>
-  					<span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
-  				</p>
-  				<p>
-  					Для заказов по телефону:<br>
-  					<span>8 812 450-25-25</span><br>
-  					(с 10 до 20 ежедневно)
-  				</p>
-  				<a class="button" href="#">Форма обратной связи</a>
-  			</div>
-  		</section>
-  	</main>
+        <div class="map-adress-absolute">
+          <div class="container map-adress-relative">
+            <div class=" map-adress">
+              <p>
+                Адреса главного офиса и офлайн-магазина:<br>
+                <span>ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
+              </p>
+              <p class="map-adress-phone">
+                Для заказов по телефону:<br>
+                <span>8 812 450-25-25</span><br>
+                (с 10 до 20 ежедневно)
+              </p>
+              <a class="button" href="#">Форма обратной связи</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
   	<footer class="container main-footer">
   		<div class="footer-social">
